init index page

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,6 @@
+@import "~normalize.css";
+@import "~@blueprintjs/core/lib/css/blueprint.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
