--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,11 @@
 @import "~normalize.css";
 @import "~@blueprintjs/core/lib/css/blueprint.css";
 
+@import "~react-grid-layout/css/styles.css";
+@import "~react-resizable/css/styles.css";
+
+@import "./md.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
