add code highlight

--- a/styles/global.css
+++ b/styles/global.css
@@ -6,6 +6,8 @@
 
 @import "./md.css";
 
+@import "~prismjs/themes/prism-okaidia.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
